fix: force message preview to be LTR & align self
For audio messages, we dont want to be dependant of the language direction. The audio player should always play left to right & be aligned left

--- a/webapp/channels/src/sass/components/_files.scss
+++ b/webapp/channels/src/sass/components/_files.scss
@@ -161,9 +161,8 @@
             align-items: center;
 
             &.transcript {
-                display: flex;
-                align-items: flex-end;
                 cursor: pointer;
+                direction:ltr;
             }
         }
 
@@ -360,6 +359,8 @@
 
     &--audio {
         overflow: visible;
+        direction:ltr;
+        justify-self: left;
 
         > .post-image__details {
             overflow: visible;
